translated hiv test,selftest  result and impact personlife to kg

--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -1238,6 +1238,81 @@
   "hiv_prevention2text6":"Программага катышуу үчүн саламаттыкты сактоо уюмунда каттоого туруш керек. Каттоо фактысы купуя мүнөзгө ээ жана үчүнчү жактарга айтылбайт. Кардарларды анонимдүү (каттоого тургузбастан) эсепке алуу күтүлүүдө",
   "hiv_prevention2text7":"Күн сайын метадон берген пунктка барып туруш керек. Учурда терапияны үзгүлтүккө учуратпай карманган кардарларга метадон беш күнгө санап берилет.",
   "hiv_prevention2text8":"Метадон баңгиликтен айыктырбайт, ошондуктан аны көп жылдар бою тынымсыз ичип туруш керек.",
-  "hiv_prevention2text9":"МТП программасы жөнүндө толук маалыматты бейөкмөт уюмдардан, СПИД борборлорунан жана наркология борборлорунан алса болот, кызматкерлер сизге МТПны баштоого жардам беришет."
+  "hiv_prevention2text9":"МТП программасы жөнүндө толук маалыматты бейөкмөт уюмдардан, СПИД борборлорунан жана наркология борборлорунан алса болот, кызматкерлер сизге МТПны баштоого жардам беришет.",
+
+
+  "hiv_test1text1": "ВИЧке тест тапшыруу\n\n",
+  "hiv_test1text2": "ВИЧке тест тапшыруу – бул жөнөкөй процедура, андан ар бир адам өтүүгө тийиш. Көпчүлүк адамдар маалыматы болбогондуктан эч качан ВИЧке тест тапшырышкан эмес. Айрымдар бул аларга тиешеси жок деп ойлошот же тест тапшыргандан коркушат. Эмне үчүн ВИЧ статусту билүү маанилүү болгонун ушул баракчадан биле аласыз.  \n",
+  "hiv_test1text3": "Эмне үчүн ВИЧке тест тапшырыш керек?\n\n",
+  "hiv_test1text4": "Эгер адам ВИЧ инфекциясын жуктуруп алганын билсе, анда ал дарылоону өз убагында баштайт, дарылоо ВИЧке чалдыккан адамдардын ден соолугун чыңдап, узак өмүр сүрүүгө мүмкүндүк берет.ВИЧ-инфекциясын дарылоо акысыз жүргүзүлөт жана аны Кыргыз Республикасынын бардык шаарларында жана айылдарында алууга болот.",
+  "hiv_test1text5": "Эгер адам ВИЧ инфекциясын жуктуруп алганын билсе, ВИЧти жыныстык өнөктөшүнө жана/же төрөлө элек баласына жуктуруп албоо үчүн алдын алуу чараларын көрөт.",
+  "hiv_test1text6": "Эгерде адам",
+  "hiv_test1text7": " ВИЧ-инфекциясын жуктурбаганын",
+  "hiv_test1text8": " билсе, анда ал кыжалат болбойт, ошол эле кезде ВИЧтен коргонуу чараларын эсинен чыгарбай жүрөт.",
+  "hiv_test1text9": "ВИЧке тест кантип алынат?\n\n",
+  "hiv_test1text10": "Организмде ВИЧ бар экенин лабораториялык изилдөө жолу менен гана аныктоого болот, ал ВИЧке тестирлөө же ВИЧке тест деп аталат.",
+  "hiv_test1text11": "ВИЧке тестирлөө ыктыярдуу жүргүзүлөт, башкача айтканда, адамдын макулдугу болмоюнча, эч ким аны ВИЧке тест тапшырууга мажбурлай албайт.",
+  "hiv_test1text12": "Тест тапшыруу жана анын жыйынтыктары жөнүндө маалымат ",
+  "hiv_test1text13": " медициналык сыр ",
+  "hiv_test1text14": " болуп саналат жана ВИЧке чалдыккан адам макул болмоюнча, ал жыйынтыкты башкаларга айтууга тыюу салынат. Бул ",
+  "hiv_test1text15": "купуялуулук ",
+  "hiv_test1text16": "деп аталат. Бул жыйынтыкты ВИЧке чалдыккандардын саламаттыгына көз салып турган медициналык кызматкерлер гана колдоно алышат.",
+  "hiv_test1text17": "ВИЧке тестти ",
+  "hiv_test1text18": " СПИД борборлорунда ",
+  "hiv_test1text19": " жана ",
+  "hiv_test1text20": "каалаган медициналык уюмда тапшырууга болот.",
+  "hiv_test1text21": "ВИЧке тестти айрым бейөкмөт уюмдарда да тапшырса болот.",
+  "hiv_test1text22": "Үй шартында ВИЧке тест тапшыруу",
+  "hiv_test1text23": " – \nВИЧке тестти өз алдынча да тапшыра аласыз. Бул тууралуу толук маалыматты Республикалык СПИД борборунун сайтынан таба аласыз:",
+  "hiv_test1text24": "Бул тесттерди дүйшөмбүдөн жума күнүнө чейин төмөнкү дарек боюнча ала аласыз: Бишкек шаары, Логвиненко көчөсү, 8-үй, 7-8-9-кабинеттер. Маалымат алуу үчүн телефон номуру: 0774 42-08-66.",
+  "hiv_test1text25": "ВИЧке текшерүү үчүн адатта канды венадан алышат, бирок канды манжадан да алса болот. Бейөкмөт уюмдарда ВИЧке тестти шилекейден тапшырса болот.",
+  "hiv_test1text26": "Тесттин жыйынтыгы колдонулган ыкмага жараша 30 мүнөттөн бир күнгө чейинки убакытта чыгат.",
+  "hiv_test1text27": "Эгерде биринчи тест организмде ВИЧтин бар экенин көрсөтсө (б.а. ВИЧке тесттин жыйынтыгы оң чыкса), анда бул жыйынтыкты бери дегенде 3 жолу текшеришет. Адамга толук тастыкталган жыйынтык айтылат. Кээде ВИЧке тест аныкталбаган (күмөндүү) жыйынтыкты берет – анда сизден 14 күндөн кийин кайрадан тест тапшырууну суранышат. Күмөндүү жыйынтык адам ВИЧти жакында эле жуктуруп алганынан же башка себептерден улам болушу мүмкүн.",
+  "hiv_test1text28":"ВИЧке тест тапшырган ар бир адам менен дарыгер/социалдык кызматкер сүйлөшөт, бул консультация берүү деп аталат. Консультация маалында вирусту жуктуруп алуу тобокелдиктери аныкталат, дарыгер коопсуз жүрүм-туруму боюнча кеңештерди, профилактикалык программалардын даректерин берет, ошондой эле тест тапшыруунун жол-жоболору тууралуу айтып берет.",
+  "hiv_test1text29": "Бейөкмөт уюмдардын базасында же үй шартында жасалган тесттердин жыйынтыгы баштапкы жыйынтык деп саналаарын, сөзсүз түрдө медициналык уюмдардан кайра текшерилиш керектигин эсиңизден чыгарбаңыз. ВИЧ-инфекциясын жуктуруп алганын уккан адам жакындарынан же бейөкмөт уюмдардын өкүлдөрүнөн колдоо таба алат.",
+
+  "hiv_selftest1": "Өз алдынча тест тапшыруу жана ВИЧ\n\n",
+  "hiv_selftest2": "Өз алдынча тест тапшыруу деген эмне?\n\n",
+  "hiv_selftest3": "ВИЧке өз алдынча текшерилүү",
+  "hiv_selftest4": " – бул медициналык кызматкерлердин катышуусуз ВИЧке өз алдынча тест тапшыруу. Тестирлөө шилекейге жасалат. Бул ыкчам-тесттин жыйынтыгы 20 мүнөттүн ичинде даяр болот.\n",
+  "hiv_selftest5": "Бул тестти кайдан алсам болот?\n\n",
+  "hiv_selftest6": "ВИЧке өз алдынча текшерилүү үчүн тесттин топтому ",
+  "hiv_selftest7": "бардык СПИД борборлорунда бар, ошондой эле аны дарыканалардан да сатып алса болот.\n\n",
+  "hiv_selftest8": "ВИЧке өз алдынча текшерилүүнүн артыкчылыктары\n\n",
+  "hiv_selftest9": "ВИЧке өз алдынча текшерилүү – бул адамга ВИЧ-статусун билүүгө мүмкүнчүлүк берген ишенимдүү жана ыңгайлуу ыкма.Бул жүрүм-туруму кооптуу болгон, бирок медициналык уюмга кайрылууга батынбаган адамдар үчүн өзгөчө маанилүү. \n\n",
+  "hiv_selftest10": "ВИЧке тестти өз алдынча кайсы жерде жана качан тапшырса болот?\n\n",
+  "hiv_selftest11": "Сиз тест жасалчу убакытты жана ордун өзүңүз тандай аласыз. Тесттен досуңуз/курбуңуз менен чогуу өтө аласыз. Кааласаңыз, ВИЧке тестти бейөкмөт уюмдун кызматкерлеринин колдоосу менен тапшырсаңыз болот.\n\n",
+  "hiv_selftest12": "Бул тест кантип иштейт? \n\n",
+  "hiv_selftest13": "Бул тест, башка көптөгөн тесттер сыяктуу эле, организмдеги вирусту эмес, антителолорду, башкача айтканда, белокту аныктайт, мындай белок организмге вирус киргенде иштелип чыгат.\n\n",
+  "hiv_selftest14": "Өз алдынча тапшырылган тесттин ичине эмнелер кирет?\n\n",
+  "hiv_selftest15": "Үй шартында жасалчу тесттин ичинде тесттин өзү, тестирлөөчү жабдуулар, ошондой эле тесттен өтүүнүн эрежелерин түшүндүргөн, тесттин жыйынтыгын чечмелеген нускама, ошондой эле коопсуз жүрүм-турум боюнча сунуштар жана презервативдер бар.\n\n",
+  "hiv_selftest16": "Тестти кантип тапшырам?\n\n",
+  "hiv_selftest17": "Бул үчүн сизге эч ким тоскоол болбой турган ыңгайлуу жерди жана убакытты табышыңыз керек. Адегенде көрсөтмөлөрдү кунт коюп окуп чыгыңыз. Тест жасалчу жерди жана жабдууларды сүрөттө көрсөтүлгөндөй даярдаңыз. Тестти тапшыруу үчүн оозуңузду ачып, үстүнкү жана астыңкы тиш этине тесттин таякчасын жүгүртүп чыгыңыз. Андан кийин таякчаны суюктук куюлган идишке (ал тесттин ичинде болот) салып, 20 мүнөт күтө туруңуз.\n\n",
+  "hiv_selftest18": "Тесттин жыйынтыгынын чечмелениши\n\n",
+  "hiv_selftest19": "20 мүнөттөн кийин тестте сызыкчалар пайда болот. Эгерде бир сызыкча болсо, анда ВИЧке антителолор табылган жок дегенди билдирет. Эгерде 2 сызыкчаны көрсөңүз, анда ВИЧке жыйынтык оң чыкты дегенди билдирет, башкача айтканда ВИЧке антителолор аныкталды. Эгер жыйынтык оң чыкса (эки сызыкчаны көрсөңүз), СПИД борборуна же башка медициналык уюмга кайрылып, ВИЧке кайталап тест тапшырышыңыз керек.\n\n",
+  "hiv_selftest20": "Тесттин тактыгы абдан жогору – 99%\n\n",
+  "hiv_selftest21": "Бирок, эгерде сиз салыштырмалуу жакында эле кооптуу жыныстык катнашта болсоңуз, анда тестти кийинчерээк, 2-3 жумадан кийин тапшырганыңыз жакшы, ошондо жыйынтык туура болот. Бул “терезе мезгили” менен байланыштуу – башкача айтканда, ВИЧ жукканы менен, антителолор пайда боло элек дегенди билдирет.\n\n",
+  "hiv_selftest22": "ВИЧке тестти канча жолу тапшырсам болот?\n\n",
+  "hiv_selftest23": "Эгерде сиз жыныстык жактан активдүү болсоңуз жана кооптуу жүрүм-турум байкалган учурлар болсо (кокустан жыныстык катнаш болсо, жыныстык өнөктөштөр көп болсо, презерватив колдонбостон жыныстык катнашка барсаңыз же баңгизатын ийне аркылуу колдонсоңуз) жылына 1-2 жолу ВИЧке тест тапшырып туруу сунушталат.\n\n",
+  "hiv_selftest24": "Эске салсак, сиз ыкчам-тестти дүйшөмбүдөн жума күндөрүнө чейин төмөнкү даректен акысыз ала аласыз: \n\n",
+  "hiv_selftest25": "Бишкек ш., Логвиненко көчөсү, 8-үй, 7-8-9-бөлмөлөр. Маалымат алуу үчүн телефон: 0774 42-08-66\n\n",
+
+  "hiv_test_result1": "ВИЧке тесттин жыйынтыгын кантип чечмелесе болот?\n\n",
+  "hiv_test_result2": "ВИЧ-инфекциясынын диагнозу лабораториялык ыкма менен коюлат. Адатта ВИЧке антителолор аныкталат – булар ВИЧ адамдын организмине киргенде пайда болгон кандын белоктору. ВИЧ-инфекциясынын диагнозун коюу – бул өтө жооптуу процесс. Бул үчүн бейтаптан алынган кандын үлгүсү бир нече жолу текшерилет, ката кетирип албаш үчүн ар кандай лабораториялык ыкмалар колдонулат.\n",
+  "hiv_test_result3": "ВИЧке тесттин жыйынтыгы:\n\n",
+  "hiv_test_result4": "ВИЧке тесттин жыйынтыгы терс чыкса ",
+  "hiv_test_result5": " адамда ВИЧке антителолор аныкталган жок дегенди билдирет. Терс жыйынтык адам ВИЧке чалдыкпаганын билдириши мүмкүн. Бирок, кээ бир учурларда тест терс жыйынтык бере алат, организмде антителолор иштелип чыга элек учур ",
+  "hiv_test_result6": "“Терезе мезгили” ",
+  "hiv_test_result7": " деп аталат. Адам ВИЧти салыштырмалуу жакында эле, тест тапшырганга чейин бери дегенде 14 күн мурда жуктуруп алса ушундай жыйынтык чыгат Мындай учурда тестти кайталап тапшыруу керек болот. Эгер жакында эле кооптуу жыныстык катнаш болгонун билсеңиз тестти 14 күндөн кийин тапшырганыңыз туура болот. Тесттин терс чыккан жыйынтыгы ВИЧ-инфекциясынан коргонуу үчүн мындан ары да колдон келген бардык сактык чараларын көрүш керектигин билдирет.\n\n",
+  "hiv_test_result8": "ВИЧке тест оң жыйынтык көрсөтсө...\n\n",
+  "hiv_test_result9": "Бул адамдын организминде ВИЧке антителолор аныкталды дегенди билдирет. ВИЧке тесттин оң жыйынтыгы дарыланууну – антиретровирустук терапияны (АРТ) баштоо үчүн мүмкүн болушунча тезирээк дарыгерге кайрылыш керектигин билдирет. АРТ ВИЧке чалдыккан адамдын ден соолугун жана өмүрүн сактап калат. Ошондой эле жыныстык өнөктөштөргө ВИЧти жуктуруп албоо үчүн болгон чараларды көрүү керек. Дарыгерлер өнөктөштөргө ВИЧ-статусуңузду ачык айтууну, аларды да ВИЧке текшерүүдөн өтүүгө көндүрүүнү сунушташат. \n\n",
+  "hiv_test_result10": "Эгерде оң жыйынтык бейөкмөт уюмдун базасында тапшырылган тестирлөө учурунда же үй шартында жасалган маалда чыкса, жыйынтык лабораториялык ыкмалар менен текшерилиши керек. \n\n",
+  "hiv_test_result11": "ВИЧ-инфекциясын жуктуруп алуу мындан ары ВИЧтен коргонуу үчүн чараларды көрүүнүн зарылчылыгы жок дегенди билдирбейт. ВИЧке чалдыккан адам ушул вирустун башка түрүн кайра жуктуруп алышы мүмкүн жана бул учурда оору оор түрүндө өтөт. Мындан тышкары, сиз жыныстык жол менен жугуучу башка инфекцияларды (сифилис, гонорея ж.б.), ошондой эле башка коркунучтуу ооруларды, мисалы, В жана С вирустук гепатиттерин жуктуруп алышыңыз мүмкүн.\n\n",
+  "hiv_test_result12": "ВИЧке тесттин жыйынтыгы күмөндүү чыкса...\n\n",
+  "hiv_test_result13": "ВИЧ-статусун аныктоого мүмкүн болбогон жыйынтык. Бул организмде антителолор иштелип чыга электе ВИЧке тест тапшырганда мына ушундай жыйынтыкты көрсөтүшү мүмкүн. Ошондой эле ВИЧке байланышы болбогон айрым бир оорулардан улам да ушундай жыйынтык чыгышы ыктымал.Мындай учурда 14 күндөн кийин кайра кан тапшыруу сунушталат. Бул дагы ВИЧти жыныстык өнөктөштөргө жуктуруп албоо үчүн алдын алуу чаралары көрүлүшү керек дегенди билдирет.\n\n",
+  "hiv_test_result14": "ВИЧке тесттин жыйынтыгы оң чыгып, бирок жалган болуп калса...\n\n",
+  "hiv_test_result15": "Адамда ВИЧ-инфекциясы болбогону менен, ВИЧке тапшырган жыйынтыгы оң чыгып калган учурда адистер оң жыйынтыкты бир нече ар кандай ыкмалар менен тастыкташат,  кээде ВИЧке кайрадан тест тапшырууну сунушташат (21 күндөн кийин).\n\n",
+  "hiv_test_result16": "ВИЧке тесттин жыйынтыгы терс, бирок жалган чыкса...\n\n",
+  "hiv_test_result17": "Бул ВИЧке тапшырган тести терс чыгып, бирок чындыгында ВИЧ-инфекциясы бар адамдар. Ошондуктан, эгерде адам кооптуу жыныстык катнашта болсо, ага тестти жылына 1-2 жолу тапшыруу сунушталат. Учурда диагностиканын жогорку сапаттагы ыкмалары гана колдонулат, алар тест жалган жыйынтык көрсөтүшүнө жол бербейт. ВИЧке тестти бейөкмөт уюмдун базасында же өз алдынча жасаганда, материалды (шилекейди) туура эмес алганда жыйынтык туура эмес чыгып калышы мүмкүн."
 
 }
