--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -1208,7 +1208,7 @@
   "hiv_prevention3text2":"Доконтактная профилактика (ДКП)\n\n",
   "hiv_prevention3text3":"Это прием антиретровирусных препаратов для предотвращения инфицирования ВИЧ людям с отрицательным ВИЧ-статусом. Доконтактная профилактика рекомендуется в случаях, если Вы имеете постоянного полового партнера, инфицированного ВИЧ, который не принимает либо часто нарушает прием препаратов. Доконтактная профилактика также рекомендуется людям, которые практикуют опасное поведение.",
   "hiv_prevention3text4":"\n\nРекомендации по доконтактной профилактике: \n\n",
-  "hiv_prevention3text5":"Следует получить полную информацию о ДКП в Центре СПИД или в НПО. Существует два способа приема ДКП. \n\\n",
+  "hiv_prevention3text5":"Следует получить полную информацию о ДКП в Центре СПИД или в НПО. Существует два способа приема ДКП. \n\n",
   "hiv_prevention3text6":"Ежедневный (постоянный) прием ДКП ",
   "hiv_prevention3text7":"нужно осуществлять очень аккуратно, ежедневно в установленное время весь период, когда существует риск. При таком приеме эффект достигается в течение 4-7 дней после начала ДКП.\n\n",
   "hiv_prevention3text8":"Если у Вас бывают редкие опасные контакты, рекомендуется ",
@@ -1238,7 +1238,82 @@
   "hiv_prevention2text6":"Для участия в программе нужно зарегистрироваться в организации здравоохранения. Факт регистрации носит конфиденциальный характер и не разглашается третьим лицам. Ожидается введение анонимного учета клиентов (без регистрации).",
   "hiv_prevention2text7":"Нужно ежедневно посещать пункт выдачи метадона. В настоящее время клиентам, которые аккуратно принимают терапию выдают метадон на 5 дней.",
   "hiv_prevention2text8":"Метадон не излечивает зависимость от наркотиков, поэтому его принимают постоянно в течение многих лет.",
-  "hiv_prevention2text9":" Подробную информацию о программе ПТМ можно получить в НПО, центрах СПИД и центрах наркологии, сотрудники которых помогут Вам начать ПТМ."
+  "hiv_prevention2text9":" Подробную информацию о программе ПТМ можно получить в НПО, центрах СПИД и центрах наркологии, сотрудники которых помогут Вам начать ПТМ.",
+
+
+  "hiv_test1text1": "Тестирование на ВИЧ\n\n",
+  "hiv_test1text2": "Тестирование на ВИЧ – это простая процедура, которую важно проходить каждому человеку. Многие никогда не проходили тест на ВИЧ из-за незнания. Некоторые думает, что это их не касается,или боятся тестирования. Почему важно знать свой ВИЧ статус, Вы узнаете на этой страничке.  \n",
+  "hiv_test1text3": "Для чего нужно пройти тест на ВИЧ?\n\n",
+  "hiv_test1text4": "Если человек знает, что он инфицирован ВИЧ, он может своевременно начать лечение, которое сохраняет здоровье и позволяет людям, живущим с ВИЧ, дожить до глубокой старости.Лечение ВИЧ-инфекции проводится бесплатно и его можно получить во всех городах и селах Кыргызской Республики",
+  "hiv_test1text5": "Если человек знает, что он инфицирован ВИЧ, он будет предпринимать меры предосторожности,чтобы не передать ВИЧ своему половому партнеру и/или своему будущему ребенку.",
+  "hiv_test1text6": "Если человек знает, что он ",
+  "hiv_test1text7": "не инфицирован ВИЧ, ",
+  "hiv_test1text8": "он успокоится, но всегда будет использовать меры защиты от ВИЧ.",
+  "hiv_test1text9": "Как проводится тест на ВИЧ?\n\n",
+  "hiv_test1text10": "Определить наличие в организме ВИЧ можно только при помощи лабораторного обследования, которое называется тестированием на ВИЧ или тест на ВИЧ.",
+  "hiv_test1text11": "Тестирование на ВИЧ проводится добровольно, то есть никто не вправе заставить человека пройти тест на ВИЧ без его согласия.",
+  "hiv_test1text12": "Сведения об обращении за тестированием и его результаты ",
+  "hiv_test1text13": "являются медицинской тайной ",
+  "hiv_test1text14": "и не могут разглашаться другим лицам без согласия ЛЖВ. Это называется ",
+  "hiv_test1text15": "конфиденциальность. ",
+  "hiv_test1text16": "Они могут использоваться только медицинскими работниками, которые проводят наблюдение за ЛЖВ.",
+  "hiv_test1text17": "Тестирование на ВИЧ можно пройти в ",
+  "hiv_test1text18": "Центрах СПИД ",
+  "hiv_test1text19": "и ",
+  "hiv_test1text20": "любой медицинской организации. ",
+  "hiv_test1text21": "Тестирование на ВИЧ можно пройти в некоторых НПО.",
+  "hiv_test1text22": "Самотестирование на ВИЧ ",
+  "hiv_test1text23": "– \nВы можете сделать тест на ВИЧ самостоятельно. Детальную информацию об этом Вы можете найти на сайте Республиканского центра СПИД по ссылке: ",
+  "hiv_test1text24": "Эти тесты Вы можете получить бесплатно с понедельника по пятницу по адресу: г. Бишкек, улица Логвиненко 8, 7-8-9 кабинет. Телефон для справок: 0774 42-08-66.",
+  "hiv_test1text25": "Для тестирования на ВИЧ, обычно берут кровь из вены; но может использоваться кровь из пальца. В НПО тестирование проходят по слюне.",
+  "hiv_test1text26": "Проведение анализа занимает от 30 минут до суток, в зависимости от используемого метода.",
+  "hiv_test1text27": "Если первый тест указывает на наличие в организме ВИЧ (то есть результат теста на ВИЧ положительный), то его перепроверяют не менее 3 раз, чтобы не ошибиться. Человеку сообщают только полностью подтвержденный результат. Иногда тест на ВИЧ дает неопределенный (сомнительный) результат – тогда Вам предложат пройти тест повторно через 14 дней. Это может быть связано с недавним заражением ВИЧ либо с другими причинами.",
+  "hiv_test1text28": "Каждое тестирование на ВИЧ сопровождается беседой с врачом /социальным работником, которая называется консультированием. При консультировании определяют возможные риски заражения, дают рекомендации по безопасному поведению, предоставляют адреса профилактических программ,а также рассказывают о процедуре тестирования.",
+  "hiv_test1text29": "Следует помнить, что результаты тестов, проведенных на базе НПО или при самотестировании на ВИЧ являются предварительными и требуют обязательного подтверждения в медицинских организациях. Человек, у которого впервые обнаружена ВИЧ-инфекция, может получить поддержку от своих близких или представителей НПО.",
+
+  "hiv_selftest1": "Самотестирование и на ВИЧ\n\n",
+  "hiv_selftest2": "Что такое самотест?\n\n",
+  "hiv_selftest3": "Самотестирование и на ВИЧ",
+  "hiv_selftest4": " - это проведение тестирования на ВИЧ самостоятельно без участия медицинских работников. Тестирование проводится по слюне. Это экспресс-тест, что позволяет узнать результат за 20 минут.\n",
+  "hiv_selftest5": "Где можно получить самотест?\n\n",
+  "hiv_selftest6": "Набор для самотестирования на ВИЧ можно получить  ",
+  "hiv_selftest7": "во всех центрах СПИД, а также купить в аптеках.\n\n",
+  "hiv_selftest8": "Преимущества самотестирования на ВИЧ\n\n",
+  "hiv_selftest9": "Самотестирование на ВИЧ является надежным и удобным методом для контроля своего ВИЧ-статуса.Особенно это важно для лиц, которые практикуют опасное поведение, но не решаются обратиться в медицинскую организацию. \n\n",
+  "hiv_selftest10": "Где и когда Вы можете пройти самотестирование?\n\n",
+  "hiv_selftest11": "Вы можете сами выбрать время и место для проведения теста. Вы можете проводить самотестирование совместно с другом /подругой. По Вашему желанию можно пройти самотестирование на ВИЧ при поддержке представителей НПО.\n\n",
+  "hiv_selftest12": "Как работает самотест? \n\n",
+  "hiv_selftest13": "Этот тест, как и многие другие тесты, определяет в организме не вирус, а антитела - то есть белки, которые вырабатываются при попадании вируса в организм.\n\n",
+  "hiv_selftest14": "Что включает набор для самотеста?\n\n",
+  "hiv_selftest15": "Набор для самотестирования на ВИЧ включает сам тест и приспособления для тестирования, а также инструкцию о проведении тестирования; оценке результатов теста, а также рекомендации по более безопасному поведению и презервативы.\n\n",
+  "hiv_selftest16": "Как провести тест?\n\n",
+  "hiv_selftest17": "Для этого нужно найти удобное место и время, чтобы Вам никто не помешал.   Сначала внимательно прочитайте инструкцию. Подготовьте рабочее место и оборудование, как на рисунке. Для проведения теста Вам нужно провести тестовой палочкой по верхней и нижней десне. После этого палочку помещаете в прилагаемую баночку с жидкостью и ждете 20 минут.\n\n",
+  "hiv_selftest18": "Оценка результата теста\n\n",
+  "hiv_selftest19": "Через 20 минут в окошке теста появятся полоски. Если одна полоска - то антител на ВИЧ нет. Если Вы увидите 2 полоски, то результат на ВИЧ положительный, то есть определены антитела к ВИЧ. При положительном результате, необходимо сдать тест на ВИЧ повторно в Центре СПИД или другой медицинской организации.\n\n",
+  "hiv_selftest20": "Точность теста очень высока - 99%\n\n",
+  "hiv_selftest21": "Однако, если у вас было небезопасное поведение относительно недавно, то лучше сдать тест спустя 2-3 недели, тогда результат будет более верным. Это связано с периодом окна – то есть периодом, когда заражение ВИЧ уже произошло, но антитела не образовались.\n\n",
+  "hiv_selftest22": "Как часто следует проходить тестирование на ВИЧ? \n\n",
+  "hiv_selftest23": "Если Вы сексуально активны и у Вас были случаи опасного поведения (случайные половые контакты, множественные партнеры, секс без использования презерватива, либо потребление наркотиков с использованием шприца) рекомендуется проходить исследование на ВИЧ 1-2 раза в год.\n\n",
+  "hiv_selftest24": "Напомним, экспресс-тесты вы можете получить бесплатно с понедельника по пятницу по адресу : \n\n",
+  "hiv_selftest25": "г. Бишкек, улица Логвиненко 8, кабинет - 7-8-9 Телефон для справок: 0774 42-08-66\n\n",
+
+  "hiv_test_result1": "Как оценить результаты тестирования на ВИЧ\n\n",
+  "hiv_test_result2": "Диагноз ВИЧ-инфекции устанавливается лабораторным методом. Чаще всего определяют антитела к ВИЧ – это белки крови, которые вырабатываются в случае попадания ВИЧ в организм человека. Установление диагноза ВИЧ-инфекции – это очень ответственный процесс. Для этого пробу крови пациента проверяют несколько раз с использованием разных лабораторных методов, чтобы избежать ошибки.\n",
+  "hiv_test_result3": "Результаты тестирования на ВИЧ:\n\n",
+  "hiv_test_result4": "Отрицательный результат теста на ВИЧ ",
+  "hiv_test_result5": "\nозначает, что в организме человека не выявлены антитела к ВИЧ.  Это может означать, что человек не инфицирован ВИЧ. Однако, в некоторых случаях тест может давать отрицательный результат, когда антитела еще не выработались в организме – это называется ",
+  "hiv_test_result6": "“Период окна”.",
+  "hiv_test_result7": "Такой результат может наблюдаться, если заражение произошло недавно – менее 14 дней до прохождения обследования. В таком случае тест нужно будет повторить. Если Вы знаете, что опасный контакт был недавно, лучше обратиться за тестированием через 14 дней. Отрицательный результат теста означает, что нужно и в дальнейшем принимать меры защиты от инфицирования ВИЧ.\n\n",
+  "hiv_test_result8": "Положительный результат теста на ВИЧ\n\n",
+  "hiv_test_result9": "Это выявление в организме человека антител к ВИЧ. Положительный результат теста на ВИЧ означает, что Вам следует как можно скорее обратиться к врачу для начала лечения – антиретровирусной терапии (АРТ). АРТ позволяет сохранить здоровье и жизнь человеку, живущему с ВИЧ. Следует также предпринять меры  предупреждения заражения ВИЧ половых партнеров. Врачи рекомендуют информировать партнеров и провести их обследование на ВИЧ. \n\n",
+  "hiv_test_result10": "Если положительный результат теста выявлен при экспресс тестировании на базе НПО или при самотестировании – он обязательно должен быть подтвержден лабораторными методами. \n\n",
+  "hiv_test_result11": "Инфицирование ВИЧ не означает, что Вам не нужно более предпринимать меры защиты от ВИЧ-инфекции. Человек, живущий с ВИЧ, может повторно заразится другим видом этого вируса, и в таком случае заболевание будет протекать тяжелее. Кроме того, можно заразиться другими инфекциями, которые передаются половым путем (сифилис, гонорея и др.), а также другими опасными заболеваниями – например, вирусными гепатитами В и С.\n\n",
+  "hiv_test_result12": "Неопределенный результат теста на ВИЧ\n\n",
+  "hiv_test_result13": "Результат, когда не удается определить ВИЧ-статус. Это возможно при раннем обращении за тестированием на ВИЧ, когда еще в организме не выработаны антитела. Может быть также при некоторых заболеваниях, не связанных с ВИЧ. В таком случае рекомендуют сдать кровь повторно через 14 дней. Это также означает, что следует строго соблюдать меры предосторожности для предупреждения заражения ВИЧ своих половых партнеров.\n\n",
+  "hiv_test_result14": "Ложноположительный результат теста на ВИЧ\n\n",
+  "hiv_test_result15": "Это лица с положительными результатами теста на ВИЧ, но у которых ВИЧ-инфекция на самом деле отсутствует. Для этого специалисты подтверждают положительный результат несколькими разными методами, а иногда рекомендуют пройти тестирование на ВИЧ повторно (через 21 день).\n\n",
+  "hiv_test_result16": "Ложноотрицательный результат теста на ВИЧ\n\n",
+  "hiv_test_result17": "Это лица с отрицательными результатами теста на ВИЧ, но у которых ВИЧ инфекция на самом деле присутствует. Поэтому, если человек практикует опасное поведение, ему рекомендуется проходить тестирование на ВИЧ 1-2 раза в год. В настоящее время применяются только высококачественные методы диагностики, которые позволяют исключить ложные результаты теста. При проведении экспресс-тестирования на ВИЧ по слюне на базе НПО или при самотестировании на ВИЧ, ложноотрицательные результаты могут быть при неправильном заборе материала (слюны)."
 
 }
 
