fixing errors in chapter one

--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -282,7 +282,7 @@
   "c1_text3": "Сиз сабырдуу болуп, ВИЧ илдети тууралуу ушул тиркемеден көбүрөөк маалымат алышыңыз керек. Сиз “Позитивдүү жашоо” деген китепти окуп, же аудиосун уга аласыз. Ошондой эле дарыгерден да керектүү маалыматты алсаңыз болот.",
   "c1_text4": "Бул тиркемеде сиз бейөкмөт уюмдардын же ВИЧ менен жашаган адамдарды (аларды ВИЧ менен жашаган адамдар деп аташат – кыскача ВЖА) колдоо топторунун даректерин таба аласыз. Алар сизге ВИЧ жөнүндө маалыматты бере алышат жана статусту кабыл алуу этабында жана дарылана баштаганда жардам көрсөтө алышат. Колдоо топтору жөнүндө дарыгериңизден да сурай аласыз.",
   "c1_text5": "Сиз жыныстык өнөктөштөрүңүзгө өз статусуңуз тууралуу ачык айтып, алар ВИЧти жуктуруп албашы үчүн чараларды көрүшүңүз керек.",
-  "c1_text6": "Нужно определить людей, которым Вы доверяете, чтобы поделиться с ними информацией и получить поддержку.",
+  "c1_text6": "Маалыматтар менен бөлүшүп, колдоо табуу үчүн сиз ишеним арткан адамдарды аныктап алышыңыз керек",
   "c1_text7": "Сиз ВИЧ-илдетинин белгилерин сезе элек болушуңуз мүмкүн, бирок ВИЧ организмде жүрөт жана иммундук (коргонуу) системанын клеткаларын акырындык менен жок кылууда. Ошондуктан өзүңүздү ВИЧтен коргоо үчүн мүмкүн болушунча тезирээк дарылоону башташыңыз керек. ",
   "c1_text8": "СПИД борборуна же башка медициналык уюмга (ҮМБ, ҮДТ) каттоого туруңуз; керектүү анализдерди тапшырып, ВИЧ-инфекциясынан дарылана баштаңыз. ",
   "c1_text9": "Канчалык эрте дарылана баштасаңыз, ВИЧ ден соолугуңузга ошончолук азыраак зыян келтирет. ",
@@ -1313,6 +1313,8 @@
   "hiv_test_result14": "ВИЧке тесттин жыйынтыгы оң чыгып, бирок жалган болуп калса...\n\n",
   "hiv_test_result15": "Адамда ВИЧ-инфекциясы болбогону менен, ВИЧке тапшырган жыйынтыгы оң чыгып калган учурда адистер оң жыйынтыкты бир нече ар кандай ыкмалар менен тастыкташат,  кээде ВИЧке кайрадан тест тапшырууну сунушташат (21 күндөн кийин).\n\n",
   "hiv_test_result16": "ВИЧке тесттин жыйынтыгы терс, бирок жалган чыкса...\n\n",
-  "hiv_test_result17": "Бул ВИЧке тапшырган тести терс чыгып, бирок чындыгында ВИЧ-инфекциясы бар адамдар. Ошондуктан, эгерде адам кооптуу жыныстык катнашта болсо, ага тестти жылына 1-2 жолу тапшыруу сунушталат. Учурда диагностиканын жогорку сапаттагы ыкмалары гана колдонулат, алар тест жалган жыйынтык көрсөтүшүнө жол бербейт. ВИЧке тестти бейөкмөт уюмдун базасында же өз алдынча жасаганда, материалды (шилекейди) туура эмес алганда жыйынтык туура эмес чыгып калышы мүмкүн."
+  "hiv_test_result17": "Бул ВИЧке тапшырган тести терс чыгып, бирок чындыгында ВИЧ-инфекциясы бар адамдар. Ошондуктан, эгерде адам кооптуу жыныстык катнашта болсо, ага тестти жылына 1-2 жолу тапшыруу сунушталат. Учурда диагностиканын жогорку сапаттагы ыкмалары гана колдонулат, алар тест жалган жыйынтык көрсөтүшүнө жол бербейт. ВИЧке тестти бейөкмөт уюмдун базасында же өз алдынча жасаганда, материалды (шилекейди) туура эмес алганда жыйынтык туура эмес чыгып калышы мүмкүн.",
+
+
 
 }
