localization in test

--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -1313,6 +1313,7 @@
   "hiv_test_result14": "ВИЧке тесттин жыйынтыгы оң чыгып, бирок жалган болуп калса...\n\n",
   "hiv_test_result15": "Адамда ВИЧ-инфекциясы болбогону менен, ВИЧке тапшырган жыйынтыгы оң чыгып калган учурда адистер оң жыйынтыкты бир нече ар кандай ыкмалар менен тастыкташат,  кээде ВИЧке кайрадан тест тапшырууну сунушташат (21 күндөн кийин).\n\n",
   "hiv_test_result16": "ВИЧке тесттин жыйынтыгы терс, бирок жалган чыкса...\n\n",
-  "hiv_test_result17": "Бул ВИЧке тапшырган тести терс чыгып, бирок чындыгында ВИЧ-инфекциясы бар адамдар. Ошондуктан, эгерде адам кооптуу жыныстык катнашта болсо, ага тестти жылына 1-2 жолу тапшыруу сунушталат. Учурда диагностиканын жогорку сапаттагы ыкмалары гана колдонулат, алар тест жалган жыйынтык көрсөтүшүнө жол бербейт. ВИЧке тестти бейөкмөт уюмдун базасында же өз алдынча жасаганда, материалды (шилекейди) туура эмес алганда жыйынтык туура эмес чыгып калышы мүмкүн."
-
+  "hiv_test_result17": "Бул ВИЧке тапшырган тести терс чыгып, бирок чындыгында ВИЧ-инфекциясы бар адамдар. Ошондуктан, эгерде адам кооптуу жыныстык катнашта болсо, ага тестти жылына 1-2 жолу тапшыруу сунушталат. Учурда диагностиканын жогорку сапаттагы ыкмалары гана колдонулат, алар тест жалган жыйынтык көрсөтүшүнө жол бербейт. ВИЧке тестти бейөкмөт уюмдун базасында же өз алдынча жасаганда, материалды (шилекейди) туура эмес алганда жыйынтык туура эмес чыгып калышы мүмкүн.",
+  "test_what_is_hiv" : "ВИЧ деген эмне (бир туура жоопту белгиле)",
+  "test_hiv_answer1" : "ВИЧ — адамдын иммундук жетишсиздигинин вирусу"
 }
