--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -1313,7 +1313,8 @@
   "hiv_test_result14": "Ложноположительный результат теста на ВИЧ\n\n",
   "hiv_test_result15": "Это лица с положительными результатами теста на ВИЧ, но у которых ВИЧ-инфекция на самом деле отсутствует. Для этого специалисты подтверждают положительный результат несколькими разными методами, а иногда рекомендуют пройти тестирование на ВИЧ повторно (через 21 день).\n\n",
   "hiv_test_result16": "Ложноотрицательный результат теста на ВИЧ\n\n",
-  "hiv_test_result17": "Это лица с отрицательными результатами теста на ВИЧ, но у которых ВИЧ инфекция на самом деле присутствует. Поэтому, если человек практикует опасное поведение, ему рекомендуется проходить тестирование на ВИЧ 1-2 раза в год. В настоящее время применяются только высококачественные методы диагностики, которые позволяют исключить ложные результаты теста. При проведении экспресс-тестирования на ВИЧ по слюне на базе НПО или при самотестировании на ВИЧ, ложноотрицательные результаты могут быть при неправильном заборе материала (слюны)."
-
+  "hiv_test_result17": "Это лица с отрицательными результатами теста на ВИЧ, но у которых ВИЧ инфекция на самом деле присутствует. Поэтому, если человек практикует опасное поведение, ему рекомендуется проходить тестирование на ВИЧ 1-2 раза в год. В настоящее время применяются только высококачественные методы диагностики, которые позволяют исключить ложные результаты теста. При проведении экспресс-тестирования на ВИЧ по слюне на базе НПО или при самотестировании на ВИЧ, ложноотрицательные результаты могут быть при неправильном заборе материала (слюны).",
+  "test_what_is_hiv" : "Что такое  ВИЧ (отметьте один правильный ответ)",
+  "test_hiv_answer1" : "ВИЧ – это вирус иммунодефицита человека"
 }
 
